deleting clutter, first draft of read mapping file

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 .DS_Store
+exercises/sacCer3.00.b.array
+exercises/sacCer3.00.b.tab
+exercises/sacCer3.files
+exercises/sacCer3.log
+exercises/sacCer3.reads
