--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ exercises/multiqc_data/multiqc_fastp.txt
 exercises/multiqc_data/multiqc_citations.txt
 exercises/multiqc_data/multiqc.log
 exercises/multiqc_data/multiqc_sources.txt
+*.rdb
+*.rdx
+*.RData
+exercises/Read_Counting_files/figure-html/visualizeq-qs-1.png
+exercises/Read_Counting_cache/html/__packages
