--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ exercises/multiqc_data/multiqc_sources.txt
 exercises/Read_Counting_files/figure-html/visualizeq-qs-1.png
 exercises/Read_Counting_cache/html/__packages
 test_folder/HPC_salmon_guide.html
+exercises/15-Network_Analysis.html
